--- a/index.html
+++ b/index.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>My test page</title>
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <title>Landing Page with Buttons</title>
+    <style>
+      /* Reset default margin and padding */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      /* Global styles */
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f2f2f2;
+      }
+
+      /* Header styles */
+      header {
+        background-color: #333;
+        color: #fff;
+        padding: 20px;
+        text-align: center;
+      }
+
+      h1 {
+        font-size: 36px;
+        margin-bottom: 10px;
+      }
+
+      /* Button styles */
+      .button {
+        display: inline-block;
+        padding: 15px 30px;
+        font-size: 18px;
+        font-weight: bold;
+        text-align: center;
+        text-decoration: none;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        margin: 10px;
+        transition: all 0.3s ease;
+      }
+
+      .button:hover {
+        background-color: #3e8e41;
+      }
+
+      /* Button container styles */
+      .button-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin-top: 50px;
+      }
+
+      /* Button container media query for smaller screens */
+      @media (max-width: 768px) {
+        .button-container {
+          flex-direction: column;
+        }
+      }
+    </style>
   </head>
   <body>
-    <h1>Test</h1>
+    <header>
+      <h1>Wesco Component Libraries</h1>
+    </header>
+
+    <main>
+      <div class="button-container">
+        <a href="/wdp-ui-components" class="button">Storybook Components</a>
+        <a href="/wdp-ui-widgets" class="button">Storybook Widgets</a>
+        <a href="/wdp-demo" class="button">Storybook Demo</a>
+      </div>
+    </main>
   </body>
 </html>
