--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
     <main>
       <div class="button-container">
-        <a href="/wdp-ui-components" class="button">Storybook Components</a>
-        <a href="/wdp-ui-widgets" class="button">Storybook Widgets</a>
-        <a href="/wdp-demo" class="button">Storybook Demo</a>
+        <a href="./wdp-ui-components" class="button">Storybook Components</a>
+        <a href="./wdp-ui-widgets" class="button">Storybook Widgets</a>
+        <a href="./wdp-demo" class="button">Storybook Demo</a>
       </div>
     </main>
   </body>
